# Giggle-Flop

./: '  Cargo.toml  README.md  a  demo.gf  demo_bin  dependency.gf  linked_list  linked_list.gf  linked_sum.gf  matrix_multiply.gf  sort.gf  store_indirect.gf  test.gf  test_bin  test_branch.gf
assembler/: Cargo.toml  README.md  bench.sh
assembler/src/: main.rs
src/: common.rs  main.rs  memory.rs
src/execution/: execution_state.rs  mod.rs
src/instruction/: instruction.rs
src/memory/: memory_block.rs  memory_level.rs  memory_line.rs  memory_system.rs
src/pipeline/: decode.rs  execute.rs  fetch.rs  instruction.rs  memory.rs  mod.rs  pipeline.rs  write_back.rs
src/register/: mod.rs  register_system.rs
src/system/: system.rs
src/ui/: ui.rs
vm/: Cargo.toml
vm/src/: lib.rs  main.rs
vm/src/instruction/: instruction.rs
vm/src/memory/: memory_block.rs  memory_level.rs  memory_line.rs  memory_system.rs  mod.rs
vm/src/register/: register_system.rs
vm/src/system/: system.rs
vm/src/ui/: ui.rs
